--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ body {
     line-height: 1.6;
     font-weight: 500;
     overflow-x: hidden;
-    background-color: #151625;
+    background-color: blue;
 }
 
 img {
@@ -639,7 +639,7 @@ body .modal-backdrop {
     transform: translate(-50%, -50%) rotate(45deg);
     width: 3px !important;
     height: 28px !important;
-    background: #151625;
+    background: blue;
     border: none !important;
     transition: all 0.3s ease;
 }
@@ -711,7 +711,7 @@ body .modal-backdrop {
     width: 20px;
     height: 1px;
     display: block;
-    background: #151625;
+    background: blue;
     z-index: 2;
     content: '';
     right: 12px;
@@ -1161,7 +1161,7 @@ body .modal-backdrop {
     05. Gamfi About Section CSS
 ---------------------------------------*/
 .gamfi-about-secion {
-    background: #151625;
+    background: blue;
 }
 
 .gamfi-about-secion .game-price-item {
@@ -3847,7 +3847,7 @@ body .gamfi-explore-content .project-item {
     20. Preloader CSS
 ---------------------------------------*/
 section.loader_first {
-    background-color: #151625;
+    background-color: blue;
     position: absolute;
     width: 100%;
     height: 100%;
