--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4745,8 +4745,8 @@ p {
     z-index: 999;
     padding: 5px 5px;
     background: var(--header-color);
-    transform-origin: top;
-    max-height: calc(100vh - 130px);
+    transform-origin: top; 
+    height: 100vh;
     overflow-y: auto;
     border-radius: 10px;
     transition: all 0.4s !important;
